[gd_scene load_steps=9 format=3 uid="uid://ce5t6tv2r834l"]

[ext_resource type="Script" uid="uid://0gnmkw8om5qu" path="res://main.gd" id="1_08s2j"]
[ext_resource type="PackedScene" uid="uid://dii48ks82b8fk" path="res://player.tscn" id="2_jektf"]
[ext_resource type="PackedScene" uid="uid://cy2v371020lj1" path="res://commonEnemy.tscn" id="4_7mycd"]
[ext_resource type="PackedScene" uid="uid://djreu7nlemxg1" path="res://hud.tscn" id="4_d5myr"]
[ext_resource type="AudioStream" uid="uid://cr4rcrbscew22" path="res://art/most-famous-movie-dying-sound-effect.mp3" id="5_lquwl"]
[ext_resource type="AudioStream" uid="uid://qgr7j8xjy1rt" path="res://audio/Bishara Haroni - Fugue in D minor.mp3" id="6_5vw27"]
[ext_resource type="PackedScene" uid="uid://dy6sk4borkxit" path="res://heart_container.tscn" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://7ovy7wx4u2g4" path="res://pit.tscn" id="8_5vw27"]

[node name="Main" type="Node"]
script = ExtResource("1_08s2j")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("2_jektf")]
z_index = 1
position = Vector2(544, 351)
collision_mask = 2

[node name="commonEnemies" parent="." instance=ExtResource("4_7mycd")]
position = Vector2(241, 212)
scale = Vector2(1.75, 1.75)

[node name="Marker2D" type="Marker2D" parent="commonEnemies"]
position = Vector2(0, 42.2857)

[node name="pit" parent="." instance=ExtResource("8_5vw27")]
position = Vector2(494, 513)

[node name="HUD" parent="." instance=ExtResource("4_d5myr")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_5vw27")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lquwl")

[node name="Hearts" type="CanvasLayer" parent="."]

[node name="heartContainer" parent="Hearts" instance=ExtResource("7_272bh")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -129.42
offset_top = 13.61
offset_right = -75.42
offset_bottom = 27.61
grow_horizontal = 0
scale = Vector2(2.1, 2.1)

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
